--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "sass --watch --update --style=expanded scss:assets/devcss",
     "prod": "sass --no-source-map --style=compressed scss:_site/assets/css",
+    "build": "npx @11ty/eleventy --formats=html"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "license": "ISC",
   "homepage": "https://www.kenny.cx/convrtrjs",
   "dependencies": {
-    "bootstrap-scss": "^5.3.2"
+    "bootstrap-scss": "^5.3.2",
+    "@11ty/eleventy": "^2.0.1"
   }
 }
