--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "convrtrjs",
   "version": "1.1.0",
   "description": "A simple JavaScript based tool to quickly convert text between different formats",
+  "tagline": "For everlost and Grollow!",
   "main": "index.html",
   "scripts": {
     "dev": "sass --watch --update --style=expanded scss:assets/devcss",
@@ -9,6 +10,7 @@
     "build": "npx @11ty/eleventy --formats=html"
   },
   "repository": {
+    "name": "stickerboy",
     "type": "git",
     "url": "git+https://github.com/stickerboy/convrtrjs.git"
   },
@@ -16,10 +18,13 @@
     "url": "https://github.com/stickerboy/convrtrjs/issues"
   },
   "author": "Kenny Cameron",
+  "authorDesc": "kenny.cx - Personal website",
+  "authorUrl": "https://kenny.cx",
   "license": "ISC",
-  "homepage": "https://www.kenny.cx/convrtrjs",
+  "sitename": "Convrtr",
+  "homepage": "https://www.convrtrjs.xyz",
   "dependencies": {
-    "bootstrap-scss": "^5.3.2",
-    "@11ty/eleventy": "^2.0.1"
+    "@11ty/eleventy": "^2.0.1",
+    "bootstrap-scss": "^5.3.2"
   }
 }
