Bundle update - header
Added github url to package.json
Link to github in header
Some silly HTML swapping and class addition to ensure the placement of the button is where I want it (outside the navbar on mobile, inline with it on desktop)

Merrged bootstrap and site styles into 1, so I make use of BS mixins
Used the mixins to fix a minor alignment issue with the header on mobile - ultimately swapped to a grid based layout - saves a little space, looks better

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "repository": {
     "name": "stickerboy",
     "type": "git",
-    "url": "git+https://github.com/stickerboy/convrtrjs.git"
+    "url": "git+https://github.com/stickerboy/convrtrjs.git",
+    "site": "https://github.com/stickerboy/convrtrjs"
   },
   "bugs": {
     "url": "https://github.com/stickerboy/convrtrjs/issues"
