--- a/.github/workflows/github-releases-to-discord.yml
+++ b/.github/workflows/github-releases-to-discord.yml
@@ -13,9 +13,9 @@ jobs:
         with:
           webhook_url: ${{ secrets.WEBHOOK_URL }}
           color: "2105893"
-          username: "Release Changelog"
-          avatar_url: "https://cdn.discordapp.com/avatars/487431320314576937/bd64361e4ba6313d561d54e78c9e7171.png"
-          content: "||@everyone||"
+          username: "Convrtr"
+          avatar_url: "https://cdn.discordapp.com/icons/816337982634065942/b5ee39b52207eb8808a3c03c7efee1dd.png"
+          content: "## A new update to Convrtr has been released"
           footer_title: "Changelog"
-          footer_icon_url: "https://cdn.discordapp.com/avatars/487431320314576937/bd64361e4ba6313d561d54e78c9e7171.png"
+          footer_icon_url: "https://cdn.discordapp.com/icons/816337982634065942/b5ee39b52207eb8808a3c03c7efee1dd.png"
           footer_timestamp: true
