Add Discord server invite to header

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "bugs": {
     "url": "https://github.com/stickerboy/convrtrjs/issues"
   },
+  "support": "https://discord.gg/FhwjhdkTwD",
   "author": "Kenny Cameron",
   "authorDesc": "kenny.cx - Personal website",
   "authorUrl": "https://kenny.cx",
