--- a/.github/workflows/github-releases-to-discord.yml
+++ b/.github/workflows/github-releases-to-discord.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Github Releases To Discord
-        uses: SethCohen/github-releases-to-discord@v1.13.1
+        uses: SethCohen/github-releases-to-discord@v1
         with:
           webhook_url: ${{ secrets.WEBHOOK_URL }}
           color: "2105893"
@@ -19,3 +19,4 @@ jobs:
           footer_title: "Changelog"
           footer_icon_url: "https://cdn.discordapp.com/icons/816337982634065942/b5ee39b52207eb8808a3c03c7efee1dd.png"
           footer_timestamp: true
+          reduce_headings: true
