--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "convrtrjs",
-  "version": "2.0.0",
-  "description": "A simple JavaScript based tool to quickly convert text between different formats, and solve data driven puzzles using a variety of coding, decryption, and cryptography techqniques",
+  "version": "2.0.1",
+  "description": "A simple JavaScript based tool to quickly convert text between different formats, and solve data driven puzzles using a variety of coding and decryption techniques",
   "tagline": "For everlost and Grollow!",
   "main": "index.html",
   "type": "module",
